@@ -12,6 +12,7 @@ import org.springframework.stereotype.Component;
 import java.util.Arrays;
 import java.util.Date;
 import java.util.HashSet;
+import java.util.List;
 
 @Component
 public class DataLoader implements ApplicationRunner {
@@ -26,7 +27,9 @@ public class DataLoader implements ApplicationRunner {
 
     public void run(ApplicationArguments args) {
         BCryptPasswordEncoder encoder = new BCryptPasswordEncoder();
-        Role role = new Role(1, "superadmin");
-        userRepository.save(new User(1, "admin", encoder.encode("password"), true, true, 0, null, new HashSet<>(Arrays.asList(role))));
+        Role adminRole = new Role(1, "superadmin");
+        Role managerRole = new Role(2, "manager");
+        userRepository.save(new User(1, "admin", encoder.encode("password"), true, true, 0, null, new HashSet<>(List.of(adminRole))));
+        userRepository.save(new User(2, "manager", encoder.encode("password"), true, true, 0, null, new HashSet<>(List.of(managerRole))));
     }
 }
